--- a/pyproject.toml
+++ b/pyproject.toml
@@ -173,7 +173,7 @@ dependencies = [
     "django-model-utils==5.0.0",
     "django-redis==6.0.0",
     "djangorestframework==3.16.1",
-    "drf-spectacular==0.28.0",,
+    "drf-spectacular==0.28.0",
     "gunicorn==23.0.0",
     "hiredis==3.2.1",
     "minio==7.2.11",
