--- a/compose/production/nginx/default.conf
+++ b/compose/production/nginx/default.conf
@@ -1,7 +1,86 @@
+upstream django {
+    server django:8000;
+}
+
+upstream minio {
+    server minio:9000;
+}
+
 server {
-  listen       80;
-  server_name  localhost;
-  location /media/ {
-    alias /usr/share/nginx/media/;
-  }
+    listen 80;
+    server_name localhost;
+    client_max_body_size 100M;
+
+    # Proxy Django API requests
+    location /api/ {
+        proxy_pass http://django;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_redirect off;
+
+        # Handle large file uploads
+        proxy_read_timeout 300s;
+        proxy_connect_timeout 75s;
+    }
+
+    # Proxy Django admin
+    location /admin/ {
+        proxy_pass http://django;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_redirect off;
+    }
+
+    # Serve Django static files
+    location /static/ {
+        alias /usr/share/nginx/static/;
+        expires 1y;
+        add_header Cache-Control "public, immutable";
+    }
+
+    # Serve Django media files
+    location /media/ {
+        alias /usr/share/nginx/media/;
+        expires 1y;
+        add_header Cache-Control "public";
+    }
+
+    # Proxy MinIO files - for direct MinIO access if needed
+    location /minio/ {
+        proxy_pass http://minio/;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_redirect off;
+
+        # Handle large file downloads
+        proxy_read_timeout 300s;
+        proxy_connect_timeout 75s;
+        proxy_buffering off;
+    }
+
+    # Proxy MinIO Console
+    location /minio-console/ {
+        proxy_pass http://minio:9001/;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_redirect off;
+    }
+
+    # Default route - proxy to Django
+    location / {
+        proxy_pass http://django;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_redirect off;
+    }
 }
