--- a/docker-compose.production.yml
+++ b/docker-compose.production.yml
@@ -3,6 +3,7 @@ volumes:
   production_postgres_data_backups: {}
   production_traefik: {}
   production_django_media: {}
+  production_django_static: {}
   production_redis_data: {}
   production_minio_data: {}
   
@@ -17,6 +18,7 @@ services:
     image: sanaap_api_challenge_production_django
     volumes:
       - production_django_media:/app/sanaap_api_challenge/media
+      - production_django_static:/app/staticfiles
     depends_on:
       - postgres
       - redis
@@ -53,10 +55,14 @@ services:
       context: .
       dockerfile: ./compose/production/nginx/Dockerfile
     image: sanaap_api_challenge_production_nginx
+    ports:
+      - "80:80"
     depends_on:
       - django
+      - minio
     volumes:
       - production_django_media:/usr/share/nginx/media:ro
+      - production_django_static:/usr/share/nginx/static:ro
 
   minio:
     image: quay.io/minio/minio:RELEASE.2025-09-07T16-13-09Z-cpuv1
